--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -6,14 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="{{ page_description | escape }}">
     <link rel="canonical" href="{{ canonical_url }}">
+
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     {{ content_for_header }}
     <!-- Header hook for plugins -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js"></script>
     {{ 'application.css' | asset_url | stylesheet_tag }}
     {{ 'application.js' | asset_url | script_tag }}
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
   <body>
-    <main role="main">
+    {% section 'header' %}
+    <h1>Product List</h1>
+    <div class="slider-wrap">
+      <div class="slideshow-container">
+        {% for item in collections['automated-collection'].products %}
+          <div class="mySlides fade">
+            <h2>{{ item.title }}</h2>
+            <p>{{ item.content }}</p>
+            <img class="w-52" src="{{item | image_url: width: 50px, height: 50px}}">
+          </div>
+        {% endfor %}
+      </div>
+      <div class="slider-arrows">
+        <ul>
+          <li class="prev-arrow">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75 3 12m0 0 3.75-3.75M3 12h18" />
+            </svg>
+          </li>
+          <li class="next-arrow">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+            </svg>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <main class="px-20" role="main">
       {{ content_for_layout }}
     </main>
   </body>
